Added backend code and frontend code which can communicate via Envoy

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Cash Out State Stream</title>
+    <title>Payment Service</title>
+    <script src="./dist/main.js"></script>
 </head>
 <body>
     <div>
-        <h1>Hello World</h1>
+        <h1>Payment Service</h1>
+    </div>
+    <div>
+        <label>ID</label>
+        <input type="text" id="id" name="id">
+    </div>
+    <div>
+        <label>Price</label>
+        <input type="number" id="price" name="price">
+    </div>
+    <div>
+        <label>Currency</label>
+        <input type="text" id="currency" name="currency">
+    </div>
+    <div>
+        <button id="submit" onclick="pay()">Submit</button>
+    </div>
+    <div>
+        <p id="response"></p>
     </div>
 </body>
 </html>
